--- a/_honour/1.md
+++ b/_honour/1.md
@@ -1,5 +1,5 @@
 ---
-title: The 2nd (2009-2015) "Special Outstanding Paper" of China Agricultural Engineering Association 2016.05
+title: (2016) Top articles in outstanding science & technology journal of China in Institute of Science and Technology Information 2015.10 French UTBM Doctoral Students Association ‘Best Paper’
 collection: honour
 permalink: /honour/1
 ---
