--- a/_honour/2.md
+++ b/_honour/2.md
@@ -1,5 +1,5 @@
 ---
-title: Top articles in outstanding science & technology journal of China in Institute of Science and Technology Information 2015.10 French UTBM Doctoral Students Association ‘Best Paper’ 2016
+title: (2016) The 2nd (2009-2015) "Special Outstanding Paper" of China Agricultural Engineering Association
 collection: honour
 permalink: /honour/2
 ---
