--- a/_honour/3.md
+++ b/_honour/3.md
@@ -1,5 +1,5 @@
 ---
-title: Valeo Smart Car Innovation Challenge (5,000 Euro project funding) 2014.04
+title: Best Student Paper of Mexico International Conference on Artificial Intelligence
 collection: honour
 permalink: /honour/3
 ---
