--- a/_honour/4.md
+++ b/_honour/4.md
@@ -1,5 +1,6 @@
 ---
-title: Best Student Paper of Mexico International Conference on Artificial Intelligence
+title: (2022) Global Plant Council Prize
+link: https://globalplantcouncil.org/announcing-the-winner-of-the-2022-global-plant-council-prize/
 collection: honour
 permalink: /honour/4
 ---
