--- a/_talks/2018-9-26-talk-3.md
+++ b/_talks/2018-9-26-talk-3.md
@@ -2,6 +2,6 @@
 title: "Deep learning based visual localization in changing environments"
 collection: talks
 type: "Talk"
-permalink: /talks/2018-09-26-talk-3
+permalink: /talks/2018-9-26-talk-3
 venue: "School of Computer Science, Shaanxi Normal University"
 ---
