--- a/_talks/2022-9-28-talk-7.md
+++ b/_talks/2022-9-28-talk-7.md
@@ -2,6 +2,6 @@
 title: "Research progress of smart agriculture based-on artificial intelligence androbots"
 collection: talks
 type: "Talk"
-permalink: /talks/2022-09-28-talk-7
+permalink: /talks/2022-9-28-talk-7
 venue: "Shanghai University"
 ---
