--- a/_talks/2015-9-7-talk-1.md
+++ b/_talks/2015-9-7-talk-1.md
@@ -2,6 +2,6 @@
 title: "Visual localization in changing environments"
 collection: talks
 type: "Talk"
-permalink: /talks/2015-09-07-talk-1
+permalink: /talks/2015-9-7-talk-1
 venue: "Heidelberg University"
 ---
