--- a/_talks/2018-10-6-talk-4.md
+++ b/_talks/2018-10-6-talk-4.md
@@ -2,6 +2,6 @@
 title: "The applications of Robotic and deep learning in smart farming"
 collection: talks
 type: "Talk"
-permalink: /talks/2018-10-06-talk-4
+permalink: /talks/2018-10-6-talk-4
 venue: "College of Computer & Information Science, Southwest University"
 ---
