--- a/_talks/2018-9-23-talk-2.md
+++ b/_talks/2018-9-23-talk-2.md
@@ -2,6 +2,6 @@
 title: "visual localization in changing environments for intelligent vehicle"
 collection: talks
 type: "Talk"
-permalink: /talks/2018-09-23-talk-2
+permalink: /talks/2018-9-23-talk-2
 venue: "Northwest A&F University"
 ---
